# zfs-autosnap

./: .cirrus.yml  Cargo.toml  README.md  license.txt  readme.md
src/: lib.rs  main.rs  zfs.rs
systemd/: zfs-autosnap-gc.service  zfs-autosnap-gc.timer  zfs-autosnap-snap.service  zfs-autosnap-snap.timer
