[package]
name = "zfs-autosnap"
authors = [
  "Wesley Moore <wes@wezm.net>",
  "Kamil Cholewiński <kamil@rollc.at>"
]
version = "0.3.1"
edition = "2018"

homepage = "https://github.com/wezm/zfs-autosnap"
repository = "https://github.com/wezm/zfs-autosnap.git"

readme = "README.md"
license = "MIT"

description = "Automatic ZFS snapshot utility"
keywords = ["zfs", "cli", "automatic", "snapshot"]
categories = ["command-line-utilities"]

[dependencies]
byte-unit = "4"
chrono = "0.4"
subprocess = "0.2"
